syntax = "proto3";
option csharp_namespace = "Phorkus.Rpc";

service AccountService {
}